force-app/main/default/objects/Dismantler__c/Dismantler__c.object-meta.xml
<CustomObject>
    <description>指定解体業者。現在解体事業者マスタが無いため、一旦ステイ</description>
    <label>登録解体業者</label>
    <nameField>
        <label>登録解体業者</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>