force-app/main/default/objects/Dismantler__c/fields/Dismantler_Locations__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_Locations__c</fullName>
    <label>都道府県</label>
    <length>255</length>
    <type>Text</type>
</CustomField>