force-app/main/default/objects/Dismantler__c/fields/Dismantler_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_Notes__c</fullName>
    <label>メモ（指定解体業者）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>