force-app/main/default/objects/Dismantler__c/fields/Dismantler_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_Numbers__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>