force-app/main/default/objects/Dismantler__c/fields/Dismantler_PIC__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_PIC__c</fullName>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>