force-app/main/default/objects/Dismantler__c/fields/Dismantler_Requested_Companies_ID__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_Requested_Companies_ID__c</fullName>
    <label>依頼元業者ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>