force-app/main/default/objects/Dismantler__c/fields/Dismantling_Codes__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Codes__c</fullName>
    <label>解体コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>