force-app/main/default/objects/Dismantler__c/fields/Fax_Numbers_Dismantler__c.field-meta.xml
<CustomField>
    <fullName>Fax_Numbers_Dismantler__c</fullName>
    <label>FAX番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>