force-app/main/default/objects/Dismantler__c/fields/Freon_Recovery_Codes__c.field-meta.xml
<CustomField>
    <fullName>Freon_Recovery_Codes__c</fullName>
    <label>フロン回収コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>