force-app/main/default/objects/Dismantler__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>登録解体業者</relationshipLabel>
    <relationshipName>Member</relationshipName>
    <type>Lookup</type>
</CustomField>